# Aletheia-Core

./: Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
data/synthetic/: generate_synthetic.py
httpx/: __init__.py  _client.py  _types.py
tests/: test_api.py  test_behavior_policy.py  test_brain_core.py  test_configuration.py  test_dog_bot_brain.py  test_engines.py  test_hardware.py  test_simulation.py  test_utils_logging.py
vct/: cli.py  config.yaml  configuration.py
vct/api/: app.py  security.py
vct/behavior/: policy.py
vct/engines/: stt.py  tts.py
vct/ethics/: guard.py
vct/hardware/: gpio_reward.py
vct/robodog/: dog_bot_brain.py
vct/simulation/: dog_env.py
vct/utils/: logging.py  metrics.py
yaml/: __init__.py
