[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vct"
version = "0.14.0"
description = "Voice Canine Trainer + RoboDog Brain (LLM-first control, reward GPIO, ethics guard)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ярослав / DexterX"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0",
  "pyttsx3>=2.90",
  "paho-mqtt>=2.1.0",
  "prometheus-client>=0.20.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
stt = [
  "openai-whisper>=20231117"
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "httpx",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["vct"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "/httpx/"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true